# meeting-assistant

./: .env.example  .gitignore  README.md  evaluation.py  main.py  protocol.py  pyproject.toml
