[project]
name = "meeting-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy-ai>=3.1.2",
    "huggingface-hub<0.25",
    "langchain>=1.2.7",
    "langfuse>=3.12.1",
    "langgraph>=1.0.7",
    "openai-whisper>=20250625",
    "openinference-instrumentation-dspy>=0.1.33",
    "scikit-learn>=1.8.0",
    "speechbrain>=1.0.3",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
]
